Group the set of passes required for XlaCallModuleOp deserialization into a separate function.
A set of passes in the beginning of the post calibration step are required just for deserializing XlaCallModuleOps that were serialized during the exporting process during the pre calibration step.
This is useful to isolate the passes that are directly involved in quantization in `AddQuantizePtqPostCalibrationStablehloPasses`.

PiperOrigin-RevId: 591755816

--- a/tensorflow/compiler/mlir/quantization/stablehlo/cc/BUILD
+++ b/tensorflow/compiler/mlir/quantization/stablehlo/cc/BUILD
@@ -122,6 +122,19 @@ tf_cc_test(
 )
 
 cc_library(
+    name = "pass_pipeline",
+    srcs = ["pass_pipeline.cc"],
+    hdrs = ["pass_pipeline.h"],
+    compatible_with = get_compatible_with_portable(),
+    deps = [
+        "//tensorflow/compiler/mlir/quantization/stablehlo:passes",
+        "//tensorflow/compiler/mlir/tensorflow/transforms:tensorflow_passes",
+        "@llvm-project//mlir:Pass",
+        "@llvm-project//mlir:Transforms",
+    ],
+)
+
+cc_library(
     name = "precalibration",
     srcs = ["precalibration.cc"],
     hdrs = ["precalibration.h"],
